# BakaEngine-Sample

./: .gitignore  .gitmodules  CMakeLists.txt
engine/: CMakeLists.txt  compile_shaders.sh
engine/include/: Baka.h  baka_config.h  baka_graphics.h  baka_input.h  baka_logger.h  baka_matrix.h  baka_mesh.h  baka_model.h  baka_shader.h  baka_texture.h  baka_timer.h  baka_vectors.h  baka_vk_command.h  baka_vk_extensions.h  baka_vk_pipeline.h  baka_vk_queues.h  baka_vk_swapchain.h  baka_vk_utils.h  baka_vk_validation.h
engine/shaders/: always.frag  always.vert  always_frag.sprv  always_vert.sprv  default.frag  default.vert  default_frag.sprv  default_vert.sprv
engine/src/: baka_config.cpp  baka_graphics.cpp  baka_input.cpp  baka_logger.cpp  baka_main.cpp  baka_matrix.cpp  baka_mesh.cpp  baka_model.cpp  baka_shader.cpp  baka_texture.cpp  baka_timer.cpp  baka_vectors.cpp  baka_vk_command.cpp  baka_vk_extensions.cpp  baka_vk_pipeline.cpp  baka_vk_queues.cpp  baka_vk_swapchain.cpp  baka_vk_utils.cpp  baka_vk_validation.cpp
sample/: CMakeLists.txt  baka.config
sample/include/: vk_sample.h
sample/src/: main.cpp
